[tool.poetry]
name = "pypi-wayback"
version = "0.1.8"
description = "PyPI wayback machine"
authors = ["Alexander Kovrigin <alexander.kovrigin@jetbrains.com>"]
readme = "README.md"
packages = [
    { include = "pypi_wayback.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
flask = "^3.0.3"

[tool.poetry.dev-dependencies]
gunicorn = "^23.0.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
